--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@ body {
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 24px;
 }
 
 p {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .flexContainer {
@@ -22,9 +22,10 @@ p {
 
 .mainDiv {
     background-color: #273549;
+    margin: 12px;
     max-width: 800px;
-    padding: 60px 40px;
-    border-radius: 15px;
+    padding: 60px 20px;
+    border-radius: 12px;
 }
 
 span {
@@ -38,9 +39,7 @@ span {
 
 a {
     text-decoration: none;
-    color: white;
-    padding-left: 40px;
-    display: none;
+    color: #273549;
 }
 
 .line {
@@ -56,8 +55,14 @@ a {
     padding: 10px 40px;
     border-radius: 6px;
     font-family: 'Karla', sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     margin: 30px 0px;
+}
+
+.restart-btn {
+    color: #273549;
+    background-color: #ffffff;
+    display: none;
 }
 
 
